--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -32,18 +32,18 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/index.html">Inicio</a>
+              <a class="nav-link" href="../../index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/pages/productos/productos.html"
+              <a class="nav-link" href="../../pages/productos/productos.html"
                 >Productos</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+              <a class="nav-link" href="../../pages/contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="ingresar" href="/pages/logg.html"
+              <a class="nav-link" id="ingresar" href="../../pages/logg.html"
                 >Ingresar</a
               >
             </li>
